--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -28,6 +28,6 @@ jobs:
         with:
           context: .
           file: ./Dockerfile_base
-          platforms: linux/amd64,linux/arm64/v8,linux/arm/v7
+          platforms: linux/amd64,linux/386,linux/arm64/v8,linux/arm/v7
           push: true
           tags: l3v11x/megarestbase:latest
