--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,12 +12,16 @@ jobs:
       matrix:
         arch:
           - linux/amd64
+          - linux/386
           - linux/arm64/v8
           - linux/arm/v7
         include:
           -
             arch: linux/amd64
             dist: amd64
+          -
+            arch: linux/386
+            dist: i386
           -
             arch: linux/arm64/v8
             dist: arm64
@@ -76,6 +80,7 @@ jobs:
         run: |
           mkdir outputs
           cp artifacts/megasdkrest-amd64/* outputs/
+          cp artifacts/megasdkrest-i386/* outputs/
           cp artifacts/megasdkrest-arm64/* outputs/
           cp artifacts/megasdkrest-armv7/* outputs/
       -
